--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <center>
   <h1>title</h1>
 </center>
-<hr>
+<hr />
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eius
+  praesentium ad quaerat minus nihil aliquid error numquam porro. Mollitia.
+</p>
